# solidbeamfem

./: .readthedocs.yaml   LICENSE  README.md  pyproject.toml
.github/workflows/: draft-pdf.yml  tests.yml
docs/: conf.py  index.md
docs/source/: ans.rst  ans_method.rst  bvp.rst  conf.py  dependencies.rst  examples.rst  index.rst  installation.rst  nfem.rst  usage.rst  weak_form.rst
joss/: paper.bib  paper.md
src/solidbeamfem/: main.py  post_processing.py  pre_processing.py  processing.py  visualize.py
